force-app/main/default/objects/LLC_BI__Tenancy__c/LLC_BI__Tenancy__c.object-meta.xml
<CustomObject>
    <description>This object represents the contract between the collateral owner and the tenant.</description>
    <label>Tenancy</label>
    <nameField>
        <displayFormat>T-{0000000000}</displayFormat>
        <label>Tenancy</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tenancies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>