force-app/main/default/objects/LLC_BI__Tenancy__c/fields/LLC_BI__Area_Measurement__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Area_Measurement__c</fullName>
    <description>Users populate this optional picklist field to indicate the unit of measurement used for the size of the area.</description>
    <label>Area Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sq Feet</fullName>
            </value>
            <value>
                <fullName>Sq Meters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>