force-app/main/default/objects/LLC_BI__Tenancy__c/fields/LLC_BI__Break_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Break_Date__c</fullName>
    <description>Users populate this optional date field to set the break date of the lease. The timing of the break date can depend on the length of the term of the lease.</description>
    <label>Break Date</label>
    <type>Date</type>
</CustomField>