force-app/main/default/objects/LLC_BI__Tenancy__c/fields/LLC_BI__Collateral__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collateral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Users populate this required field to reference the collateral that is associated with the tenancy. The system automatically populates the field if the user created the tenancy from a collateral record.</description>
    <inlineHelpText>This field displays the relationship between the collateral and the tenancy.</inlineHelpText>
    <label>Collateral</label>
    <referenceTo>LLC_BI__Collateral__c</referenceTo>
    <relationshipLabel>Tenancies</relationshipLabel>
    <relationshipName>Collateral_Tenancies</relationshipName>
    <type>Lookup</type>
</CustomField>