force-app/main/default/objects/LLC_BI__Tenancy__c/fields/LLC_BI__Cost_Frequency__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Cost_Frequency__c</fullName>
    <description>Users populate this optional picklist field to indicate whether the cost per area is captured on a monthly or annual basis.</description>
    <label>Cost Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>