force-app/main/default/objects/LLC_BI__Tenancy__c/fields/LLC_BI__Cost_Per_Area__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Cost_Per_Area__c</fullName>
    <description>Users populate this optional currency field to indicate the cost per area unit.</description>
    <label>Cost Per Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>