force-app/main/default/objects/LLC_BI__Tenancy__c/fields/LLC_BI__Floor_Area__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Floor_Area__c</fullName>
    <description>Users populate this optional number field to indicate the total square measurement of floor space in square units.</description>
    <inlineHelpText>This field defines the total square measurement of floor space in square units.</inlineHelpText>
    <label>Floor Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>