force-app/main/default/objects/LLC_BI__Tenancy__c/fields/LLC_BI__Income__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Income__c</fullName>
    <description>Users populate this optional currency field to indicate the amount of income the owner earns from tenancies.</description>
    <inlineHelpText>This field defines the amount of income the owner earns from tenancies.</inlineHelpText>
    <label>Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>