force-app/main/default/objects/LLC_BI__Tenancy__c/fields/LLC_BI__Income_Frequency__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Income_Frequency__c</fullName>
    <description>Users populate this optional picklist field to indicate the rate of income from the tenancies.</description>
    <label>Income Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>