force-app/main/default/objects/LLC_BI__Tenancy__c/fields/LLC_BI__Is_Private_Tenant__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Private_Tenant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users populate this optional checkbox field to indicate if the tenant details are private or unknown.</description>
    <label>Is Private Tenant</label>
    <type>Checkbox</type>
</CustomField>