force-app/main/default/objects/LLC_BI__Tenancy__c/fields/LLC_BI__Lease_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Lease_Start_Date__c</fullName>
    <description>Users populate this required date field to set the date on which a lease agreement begins.</description>
    <label>Lease Start Date</label>
    <type>Date</type>
</CustomField>