force-app/main/default/objects/LLC_BI__Tenancy__c/fields/LLC_BI__Lease_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Lease_Type__c</fullName>
    <description>Users populate this optional picklist field to indicate the type of lease agreement for a specific property or asset.</description>
    <label>Lease Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Triple Net Lease</fullName>
            </value>
            <value>
                <fullName>Full Service Lease</fullName>
            </value>
            <value>
                <fullName>Modified Gross Lease</fullName>
            </value>
            <value>
                <fullName>Absolute Net Lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>