force-app/main/default/objects/LLC_BI__Tenancy__c/fields/LLC_BI__Leaseholder__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Leaseholder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Users populate this required lookup field to reference the relationship that is associated with the tenancy.</description>
    <label>Tenant</label>
    <referenceTo>LLC_BI__Tenant__c</referenceTo>
    <relationshipLabel>Tenancies</relationshipLabel>
    <relationshipName>Tenancies</relationshipName>
    <type>Lookup</type>
</CustomField>