force-app/main/default/objects/LLC_BI__Tenancy__c/fields/LLC_BI__Monthly_Rent__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Monthly_Rent__c</fullName>
    <description>Users populate this optional currency field to capture the cost of rent the tenant pays as rent every month. It is used in conjunction with the Lease Start and End Date fields to calculate the total rent for the lease period.</description>
    <label>Monthly Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>