force-app/main/default/objects/LLC_BI__Tenancy__c/fields/LLC_BI__Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Status__c</fullName>
    <description>Users populate this optional picklist field to capture the status of the tenancy.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vacant</fullName>
            </value>
            <value>
                <fullName>Proposed</fullName>
            </value>
            <value>
                <fullName>Occupied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>