force-app/main/default/objects/LLC_BI__Tenancy__c/fields/LLC_BI__Tenant__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Users populate this optional lookup field to reference the relationship that is associated with the tenancy. The system automatically populates the field if the user created the tenancy from a relationship record.</description>
    <inlineHelpText>This field displays the relationship between the tenant and the tenancy.</inlineHelpText>
    <label>-D Relationship</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tenancies</relationshipLabel>
    <relationshipName>Collateral_Tenancies</relationshipName>
    <type>Lookup</type>
</CustomField>