force-app/main/default/objects/LLC_BI__Tenancy__c/fields/LLC_BI__Tenant_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Tenant_Type__c</fullName>
    <description>Users populate this required picklist field to indicate the type of tenant that is renting a specific property or asset.</description>
    <label>Tenant Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>