force-app/main/default/objects/LLC_BI__Tenancy__c/fields/LLC_BI__Unit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Unit__c</fullName>
    <description>Users populate this optional text field to indicate the specific unit of a rental property that a tenant will be occupying.</description>
    <inlineHelpText>This field defines the unit of a rental property that a tenant will be occupying.</inlineHelpText>
    <label>Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>